@@ -5,3 +5,4 @@ sha1.o
 sha256.o
 sha384.o
 sha512.o
+surf.o
